fix: widgets are visible everywhere, fixed size

--- a/src/components/widgets.scss
+++ b/src/components/widgets.scss
@@ -7,17 +7,23 @@ $icon-color: #ee6161;
 }
 
 @mixin widget {
-  max-width: 200px;
+  width: fit-content;
   background-color: rgba(255, 255, 255, 0.65);
   backdrop-filter: blur(1px);
   color: black;
   border-radius: 8px;
   padding: 8px;
   z-index: 1000;
+  box-sizing: border-box;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   font-size: 1rem;
   text-align: center;
   transition: font 0.3s;
+
+  div,
+  span {
+    white-space: nowrap;
+  }
 
   @include screen_max(600px) {
     padding: 4px;
